--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,9 @@
     <title>Clínica Pública da Zona Leste</title>
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/vlibras.css">
     <link rel="icon" href="/img/PatClinic.png">
-
+    <script src="/js/vlibras.js"></script>
 </head>
 <body>
     
