--- a/views/p-07AnimalCadastro.ejs
+++ b/views/p-07AnimalCadastro.ejs
@@ -6,12 +6,13 @@
     <title>Cadastre seu animal! | PetClinic</title>
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/style07.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="/style/vlibras.css">
     <link rel="icon" href="/img/PatClinic.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    <script src="/js/vlibras.js"></script>
 </head>
 <body>
     <div class="container">
