--- a/views/p-09perfil.ejs
+++ b/views/p-09perfil.ejs
@@ -6,7 +6,9 @@
     <title>Perfil do Usuário</title>
     <link rel="stylesheet" href="/style/style09.css">
     <link rel="stylesheet" href="/style/style10.css">
+    <link rel="stylesheet" href="/style/vlibras.css">
     <link rel="icon" href="/img/PatClinic.png">
+    <script src="/js/vlibras.js"></script>
 </head>
 <body>
     <header>
