--- a/public/style/style08.css
+++ b/public/style/style08.css
@@ -77,6 +77,7 @@ main{
     width: 100%;
     height: 800px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
