--- a/views/p-03User.ejs
+++ b/views/p-03User.ejs
@@ -6,6 +6,8 @@
     <title>Cuide do seu pet! | PetClinic</title>
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/style03.css">
+    <link rel="stylesheet" href="/style/vlibras.css">
+    <script src="/js/vlibras.js"></script>
 </head>
 <body>
     <div>
