--- a/views/p-04Recep.ejs
+++ b/views/p-04Recep.ejs
@@ -6,6 +6,8 @@
     <title>Recepção | PetClinic</title>
     <link rel="stylesheet" href="../style/main.css">
     <link rel="stylesheet" href="../style/style04.css">
+    <link rel="stylesheet" href="/style/vlibras.css">
+    <script src="/js/vlibras.js"></script>
 </head>
 <body>
     
