--- a/views/p-05Doctor.ejs
+++ b/views/p-05Doctor.ejs
@@ -6,6 +6,8 @@
     <title> Médico(a) | PetClinic</title>
     <link rel="stylesheet" href="../style/main.css">
     <link rel="stylesheet" href="../style/style05.css">
+    <link rel="stylesheet" href="/style/vlibras.css">
+    <script src="/js/vlibras.js"></script>
 </head>
 <body>
     
