--- a/views/p-06novasenha.ejs
+++ b/views/p-06novasenha.ejs
@@ -6,9 +6,11 @@
     <title>Senha Nova | PetClinic</title>
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/style06.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="/style/vlibras.css">
     <link rel="icon" href="/img/PatClinic.png">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="/js/vlibras.js"></script>
 </head>
 <body>
     <div class="logo">        
