--- a/views/p-08agendamento.ejs
+++ b/views/p-08agendamento.ejs
@@ -6,10 +6,12 @@
     <title>Agende Sua Consulta | PetClinic</title>
     <link rel="stylesheet" href="../style/main.css">
     <link rel="stylesheet" href="../style/style08.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="/style/vlibras.css">
     <link rel="icon" href="../img/PatClinic.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="/js/vlibras.js"></script>
     
 </head>
 <body>
@@ -95,12 +97,12 @@
                         <span class="loading-spinner"></span>
                     </button>
                 </div>
-            </form>
-            <div class="container mt-5">
-                <h3>Meus Agendamentos</h3>
-                <div id="listaAgendamentos" class="row">
-                    <!-- Os agendamentos serão inseridos aqui via JavaScript -->
-                </div>
+            </form>            
+        </div>
+        <div class="container mt-5">
+            <h3>Meus Agendamentos</h3>
+            <div id="listaAgendamentos" class="row">
+                <!-- Os agendamentos serão inseridos aqui via JavaScript -->
             </div>
         </div>
     </main>
